fix: Add gap to navigation
This allows the buttons to have their hover-grow effect and without being cut off by the hidden overflow.

--- a/app/frontend/scss/elements/_navigation.scss
+++ b/app/frontend/scss/elements/_navigation.scss
@@ -5,6 +5,9 @@
 .navigation {
   @include max-width;
   overflow-x: auto;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  margin: -0.25rem auto;
 
   @include breakpoint(desktop) {
     display: grid;
